# crewai_poc

research_crew/: README.md  pyproject.toml  report.md
research_crew/src/research_crew/: __init__.py  crew.py  main.py
research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
research_flow/: README.md  crewai_flow.html  openai_prompt_examples.py  poem.txt  pyproject.toml
research_flow/db/: chroma.sqlite3
research_flow/src/research_flow/: __init__.py  main.py
research_flow/src/research_flow/crews/research_crew/: research_crew.py
research_flow/src/research_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
research_flow/src/research_flow/crews/sports_crew/: sports_crew.py
research_flow/src/research_flow/crews/sports_crew/config/: agents.yaml  tasks.yaml
